--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,17 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.6.3'
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
     }
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = "3.5"
 }
